[gd_scene load_steps=7 format=3 uid="uid://cxddpvha2oe7a"]

[ext_resource type="Script" path="res://src/system/combat_ui.gd" id="1_km50y"]
[ext_resource type="PackedScene" uid="uid://wfu20bvryfjc" path="res://src/entities/player.tscn" id="2_vm3j3"]
[ext_resource type="PackedScene" uid="uid://bbw4w2tfto70c" path="res://src/entities/enemy.tscn" id="3_xo4kt"]

[sub_resource type="Theme" id="Theme_8yfoy"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_2phu8"]
default_font_size = 50

[sub_resource type="Theme" id="Theme_egtyj"]
default_font_size = 75

[node name="CombatUI" type="Node2D"]
script = ExtResource("1_km50y")

[node name="PlayerCoinLabel" type="ItemList" parent="."]
offset_left = 83.0
offset_top = 236.0
offset_right = 529.0
offset_bottom = 317.0
theme = SubResource("Theme_8yfoy")
item_count = 1
item_0/text = "Your Coins:"
item_0/selectable = false

[node name="PlayerCoinList" type="ItemList" parent="."]
offset_left = 83.0
offset_top = 329.0
offset_right = 527.0
offset_bottom = 566.0
theme = SubResource("Theme_2phu8")
select_mode = 1

[node name="EnemyCoinLabel" type="ItemList" parent="."]
offset_left = 1377.0
offset_top = 236.0
offset_right = 1823.0
offset_bottom = 317.0
theme = SubResource("Theme_8yfoy")

[node name="EnemyCoinList" type="ItemList" parent="."]
offset_left = 1377.0
offset_top = 329.0
offset_right = 1821.0
offset_bottom = 566.0
theme = SubResource("Theme_2phu8")
select_mode = 1

[node name="Flip" type="Button" parent="."]
offset_left = 819.0
offset_top = 765.0
offset_right = 1057.0
offset_bottom = 935.0
theme = SubResource("Theme_egtyj")
text = "Flip!"

[node name="Player" parent="." instance=ExtResource("2_vm3j3")]

[node name="Enemy" parent="." instance=ExtResource("3_xo4kt")]
visible = false

[node name="CombatText" type="RichTextLabel" parent="."]
offset_left = 645.0
offset_top = 188.0
offset_right = 1246.0
offset_bottom = 499.0

[connection signal="multi_selected" from="PlayerCoinList" to="." method="_on_player_coin_list_multi_selected"]
[connection signal="pressed" from="Flip" to="." method="_on_flip_pressed"]
